k8s/development/deployements.yaml
# api-gateway

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: nspious/streamio-api-gateway:latest
        ports:
          - containerPort: 5000
        volumeMounts:
        - name: api-gateway-code
          mountPath: /app/apiGateway
      volumes:
      - name: api-gateway-code
        hostPath:
          path: /run/desktop/mnt/host/f/BroCamp/NewFrontend/StreamioBackend/apiGateway
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: streamio
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: api-gateway
  type: ClusterIP
---



#userservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: nspious/streamio-user-service:latest
        ports:
          - containerPort: 5001
        volumeMounts:
        - name: user-service-code
          mountPath: /app/userService
      volumes:
      - name: user-service-code
        hostPath:
          path: /run/desktop/mnt/host/f/BroCamp/NewFrontend/StreamioBackend/userService
          type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: streamio
spec:
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: user-service
  type: ClusterIP
---


#commentservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comment-service
  template:
    metadata:
      labels:
        app: comment-service
    spec:
      containers:
      - name: comment-service
        image: nspious/streamio-user-service:latest
        ports:
          - containerPort: 5003
        volumeMounts:
        - name: comment-service-code
          mountPath: /app/commentService
      volumes:
      - name: comment-service-code
        hostPath:
          path: /run/desktop/mnt/host/f/BroCamp/NewFrontend/StreamioBackend/commentService
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: comment-service
  namespace: streamio
spec:
  ports:
  - port: 5003
    targetPort: 5003
  selector:
    app: comment-service
  type: ClusterIP
---



#liveservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: live-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: live-service
  template:
    metadata:
      labels:
        app: live-service
    spec:
      containers:
      - name: live-service
        image: nspious/streamio-live-service:latest
        ports:
          - containerPort: 5005
        volumeMounts:
        - name: live-service-code
          mountPath: /app/liveService
      volumes:
      - name: live-service-code
        hostPath:
          path: /run/desktop/mnt/host/f/BroCamp/NewFrontend/StreamioBackend/liveService
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: live-service
  namespace: streamio
spec:
  ports:
  - port: 5005
    targetPort: 5005
  selector:
    app: live-service
  type: ClusterIP
---



#videoservice
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-service
  namespace: streamio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-service
  template:
    metadata:
      labels:
        app: video-service
    spec:
      containers:
      - name: video-service
        image: nspious/streamio-video-service:latest
        ports:
          - containerPort: 5002
        volumeMounts:
        - name: video-service-code
          mountPath: /app/videoService
      volumes:
      - name: video-service-code
        hostPath:
          path: /run/desktop/mnt/host/f/BroCamp/NewFrontend/StreamioBackend/videoService
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: video-service
  namespace: streamio
spec:
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: video-service
  type: ClusterIP
---
